# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "blades of space"
version = "1.0.0"
description = "Shut em up"
readme = "README.md"
authors = ["Pekloslav Sich <pekloslav.sich@gmail.com>"]
license = "MIT"
keywords = [
    "python",
    "cookiecutter",
    "template",
    "packages",
    "makefile",
    "best-practices",
    "poetry",
    "codestyle",
    "formatters",
    "python-packages",
    "semantic-versions"
]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = []

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.3.dev8"
pudb = "^2022.1.3"


[tool.black]
# https://github.com/psf/black
target-version = ["py37"]
line-length = 100
color = true
